--- a/test.kv
+++ b/test.kv
@@ -31,13 +31,13 @@
             size_hint: 0.2, 0.10
 
         Label:
-            text:"Crop to Dimentions: "
+            text:"Crop to Dimensions: "
             font_size: (root.width**2 + root.height**2) / 13**4
             pos_hint: {"x":0.1, "top":0.7}
             size_hint: 0.35, 0.15
         
         Label:
-            text:"Keep Ratio: "
+            text:"Keep Aspect Ratio: "
             font_size: (root.width**2 + root.height**2) / 13**4
             pos_hint: {"x":0.1, "top":0.5}
             size_hint: 0.35, 0.15
@@ -64,8 +64,7 @@
                 root.loginBtn()
 
 <MainWindow>:
-
-
+    selected: listview
     FloatLayout:
         cols:1
 
@@ -83,6 +82,15 @@
                 pos_hint: {"x":0, "top":0.8}
                 text: "Choose Files: "
                 font_size: (root.width**2 + root.height**2) / 14**4
+            
+            Label:
+                id: listview
+                text: "Selected 6 Images"
+                pos_hint: {"x":0.3, "top":0.6}
+                size_hint: 0.5,0.12
+                font_size: (root.width**2 + root.height**2) / 13**4
+
+
 
         Button:
             pos_hint:{"x":0.2,"y":0.05}
