Changed Add Items Text

--- a/test.kv
+++ b/test.kv
@@ -85,7 +85,7 @@
             
             Label:
                 id: listview
-                text: "Selected 6 Images"
+                text: "Drop Items Here"
                 pos_hint: {"x":0.3, "top":0.6}
                 size_hint: 0.5,0.12
                 font_size: (root.width**2 + root.height**2) / 13**4
